methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:19: error: not found: type Colors
def flower(c:Colors){
             ^FlowerPot:9: error: value VERT is not a member of object java.awt.Color
  flower(Color.VERT)
               ^