methods.flowerpot.FlowerPot.scala.code
val jaune = Color.YELLOW
def growFlowers(){
  avance()
  droite()
  flower(Color.RED)
  change()
  flower(Color.CYAN)
  change()
  flower(Color.VERT)
  change()
  flower(Color.PINK)
	changeCentre()
  flower(Color.ORANGE)
  
  
  
}

def flower(c:Colors){
  marque(jaune)
  for(i<- 1 to 4){
    avance()
    marque(c)
    recule()
    gauche()
    
  }
  
  
  
}

def change(){
  gauche()
  for(i<- 1 to 4){
    avance()
  }
}

def changeCentre(){
  setPos(3,3)
}

def marque(c:Color){
  setCouleurBrosse(c)
  baisseBrosse()
  leveBrosse()
  
}